IKASAN-576: SFTP consumer and producer